module/core/former/tests/inc/enum_unit_tests/compile_fail/subform_scalar_on_unit.rs
use former::Former;

#[ derive( Former ) ]
enum TestEnum {
  #[ subform_scalar ] // This should cause a compile error
  MyUnit,
}
fn main() {}